Fixed bug where filter pane would not collapse

--- a/src/components/general/FilterPane/styles.less
+++ b/src/components/general/FilterPane/styles.less
@@ -252,9 +252,7 @@
 
     &.isCollapsed {
 
-        .content {
-            width: auto;
-        }
+        width: auto;
 
         &.compact, &.comfortable {
             .content {
